<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cloud Community</string>
    <string name="change_password">Please change password</string>
    <string name="not_optional">Sorry, not optional</string>
    <string name="two_password_not_match">Two password not match</string>
    <string name="wrong_password">Wrong password</string>
    <string name="changing_password">Changing password</string>
    <string name="changed_successfully">It has been changed</string>
    <string name="changed_failed">Failed to change</string>
    <string name="system_crash">System crash</string>
    <string name="uploading">Uploading now</string>
    <string name="edit_finished">Edit finished</string>
    <string name="community_info_loading_failed">Community info loading failed, please check network</string>
    <string name="updating_personal_details">Updating personal details now</string>
    <string name="updated_personal_details">Personal details has been updated</string>
    <string name="failed_update_personal_details">Failed to update personal details</string>
    <string name="submiting_feedback">Submiting feedback now</string>
    <string name="submitted_feedback">Feedback has been submited, thank you very much</string>
    <string name="failed_submit_feedback">Failed to submit feedback</string>
    <string name="details">More details</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Cancel follow</string>
    <string name="score_total">Score,Total</string>
    <string name="people_feedback">People submitted feedback</string>
    <string name="feedback">Feedback</string>
    <string name="modify">Modify</string>
    <string name="follower">Follower</string>
    <string name="product">Product</string>
    <string name="say_something">Say something</string>
    <string name="report">Report</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="thanks">Thank you very much</string>
    <string name="delete_comment">Delete comment</string>
    <string name="comment">Comment</string>
    <string name="followed">It has been followed</string>
    <string name="call">Please contact by phone</string>
    <string name="activity">Activity</string>
    <string name="business_service">Business service</string>
    <string name="personal_service">Personal service</string>
    <string name="publish">Publish</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="auto_login_failed">Auto login failed</string>
    <string name="login_or_register">Login or register</string>
    <string name="login_before_publish">Please register first</string>
    <string name="setting">Setting</string>
    <string name="fan">Fans</string>
    <string name="user_not_exist">User not exists</string>
    <string name="upload_background">Uplaoding background</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="failed_save_uploaded_photo">Cannot save uploaded photo,please check your SD card</string>
    <string name="failed_upload_not_exist_photo">Photo does not exist, failed to upload</string>
    <string name="failed_to_get_uptoken">Failed to get uptoken</string>
    <string name="add_product">Add product</string>
    <string name="adding_product">Adding product now</string>
    <string name="added_successfully">Product has been added</string>
    <string name="added_failed">Failed to add</string>
    <string name="cannot_find">Sorry, cannot find</string>
    <string name="select_address_on_map">Please select a address on the map</string>
    <string name="help">help</string>
    <string name="map_help_details">Click map to select a location, use arrow button to adjust.</string>
    <string name="click_map_first">Please click map to select a location</string>
    <string name="original_password">Original password</string>
    <string name="password_hint">Password length between 6 to 12 [No #$%^&amp;/*\~]</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password[Type again]</string>
    <string name="submit">Submit</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="nick_name">Nick name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email address:</string>
    <string name="level">Level:</string>
    <string name="date_of_birth">The date of birth:</string>
    <string name="permission">Permission:</string>
    <string name="tag_hint">Please input tags,use , to split them</string>
    <string name="input_comment">Please input comments</string>
    <string name="content">Content:</string>
    <string name="feedback_content">Input feedback content</string>
    <string name="service_name">Service name</string>
    <string name="publish_time">Publish time</string>
    <string name="service_brief">Service details</string>
    <string name="total_people_comment">Total 100 people added comments</string>
    <string name="title">Title:</string>
    <string name="input_title">Input title</string>
    <string name="brief_hint">Please write brief intruduction</string>
    <string name="address_details">Address details:</string>
    <string name="select_address_right_icon">Click right icon to select location</string>
    <string name="phone_hint">Please input phone number</string>
    <string name="tag">Tag:</string>
    <string name="tab_between">Split tags by ,</string>
    <string name="private_message">Private message</string>
    <string name="service">Service</string>
    <string name="input_product_name">Input product name</string>
    <string name="input_product_brief">Input product brief intruduction</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="finish">Finish</string>
    <string name="edit">Edit</string>
    <string name="check_author">View Author</string>
    <string name="showing_on_map">Located on the map</string>
    <string name="administrator">Administrator</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="edit_password">Modify password</string>
    <string name="add">Add</string>
    <string name="friend">Friend</string>
    <string name="activity_signup">Attend Activity</string>
    <string name="activity_signuping">Submiting activity interest</string>
    <string name="activity_signup_fail">Failed to submit activity interest,</string>
    <string name="activity_call">Please give a call?\n</string>
    <string name="activity_signup_cancel">Cancel interest</string>
    <string name="activity_signup_cancel_fail">Failed to cancel interest,</string>
    <string name="activity_signup_canceling">Canceling interest now...</string>
    <string name="evaluation">Feedback</string>
    <string name="comment_delete">Delete comment</string>
    <string name="activity_signup_people">Attender(</string>
    <string name="adult_count">Adults,</string>
    <string name="child_count">Children.</string>
    <string name="auto_login_fail">Failed to login in automatically,</string>
    <string name="task">Task</string>
    <string name="attention">Follow</string>
    <string name="collection">Collection</string>
    <string name="square">Square</string>
    <string name="server">Server</string>
    <string name="person">Person</string>
    <string name="you_must_login_before">Please login in first</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_forgot_password">Forget password</string>
    <string name="login_progress_signing_in">Login&#8230;</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password is to short</string>
    <string name="error_incorrect_password">Username or password is not correct</string>
    <string name="error_field_required">Not optional</string>
    <string name="feedback_anonymous">Thank you for your feedback, we do not bother you anymore</string>
    <string name="feedback_not_anonymous">Thank you for your feedback, we will contact you shortly</string>
    <string name="about">about</string>
    <string name="change_community">change_community</string>
    <string name="theme">theme</string>
    <string name="check_version">check_version</string>
    <string name="wifi_update">wifi_update</string>
    <string name="search_history">search_history</string>
    <string name="business_msg">business_msg</string>
    <string name="activity_msg">activity_msg</string>
    <string name="friend_msg">friend_msg</string>
    <string name="select">select</string>
    <string name="theme_android">android theme</string>
    <string name="theme_ios">ios theme</string>
    <string name="release_product">Release Product</string>
    <string name="release_activity">Release Activity</string>
    <string name="my_collection">My Collection</string>
    <string name="my_attention">My Attention</string>
    <string name="property">Property</string>
    <string name="repair">Repaire</string>
    <string name="express">Express</string>
    <string name="washing">Washing</string>
    <string name="takeout">Take Out</string>
    <string name="life_distribution">Life Distribution</string>
    <string name="fruits">Fruits</string>
    <string name="housekeeping_service">Housekeeping Service</string>

</resources>