<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/original_password"></TextView>

        <EditText
            android:id="@+id/change_password_0"
            style="@style/form_right"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/change_password_1"
            style="@style/form_right"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/new_password_again" />

        <EditText
            android:id="@+id/change_password_2"
            style="@style/form_right"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/change_password_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>