<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/nick_name" />

        <EditText
            android:id="@+id/edit_person_info_name"
            style="@style/form_right" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/brief" />

        <EditText
            android:id="@+id/edit_person_info_intro"
            style="@style/form_right" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/edit_person_info_phone"
            style="@style/form_right"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edit_person_info_email"
            style="@style/form_right"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/level" />

        <EditText
            android:id="@+id/edit_person_info_housenumber"
            style="@style/form_right" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/date_of_birth" />

        <TextView
            android:id="@+id/edit_person_info_birthday"
            style="@style/form_right"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout style="@style/single_view" >

        <TextView
            style="@style/form_left"
            android:text="@string/permission" />

        <Spinner
            android:id="@+id/edit_person_info_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:entries="@array/user_permission" />
    </LinearLayout>

</LinearLayout>