<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/person_home_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:background="@color/gray" />

            <ImageButton
                android:id="@+id/person_home_bg_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/person_home_bg"
                android:layout_alignRight="@+id/person_home_bg"
                android:background="@color/transparent"
                android:src="@drawable/ic_edit" />

            <FrameLayout
                android:id="@+id/person_home_header"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_alignBottom="@+id/person_home_bg"
                android:layout_marginBottom="-36dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >
            </FrameLayout>

            <TextView
                android:id="@+id/person_home_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/person_home_header"
                android:layout_toRightOf="@+id/person_home_header"
                android:paddingBottom="5dp"
                android:text="name" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_home_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1.0" />

            <Button
                android:id="@+id/person_home_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow" />

            <Button
                android:id="@+id/person_home_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/private_message" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/person_home_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/follow" />

            <Button
                android:id="@+id/person_home_fans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/fan" />

            <Button
                android:id="@+id/person_home_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/service" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <FrameLayout
            android:id="@+id/person_home_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </FrameLayout>
    </LinearLayout>

</ScrollView>
